--- a/index.html
+++ b/index.html
@@ -5,18 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/style.css">
     <title>Typing skill</title>
 </head>
-<body class="bg-dark text-center text-white">
-    <header class="bg-secondary text-center p-3 mb-5" >
+<body class=" ext-center">
+    <header class=" text-center p-3 mb-5" >
         <h1>Word Beater</h1>
     </header>
     <div class="container text-center">
 <!-- Word input -->
         <div class="row">
             <div class="col-md-6 mx-auto">
-                <p class="lead">Type the given word within <span class="text-success" id="seconds">5</span> Seconds:</p>
-                <h2 class="display-2 mb-5" id="current-word" >Hello</h2>
+                <p class="lead">Type the given word within <span class="text-success" id="seconds"></span> Seconds:</p>
+                <h2 class="display-2 mb-5" id="current-word" ></h2>
                 <input type="text" class="form-control form-control-lg" placeholder="Start typing..." id="word-input" autofocus>
                 <h4 class="mt-3" id="message"></h4>
 
