--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body class=" ext-center">
     <header class=" text-center p-3 mb-5" >
-        <h1>Word Beater</h1>
+        <h1>Typing skill</h1>
     </header>
     <div class="container text-center">
 <!-- Word input -->
@@ -28,6 +28,9 @@
                     </div>
                     <div class="col-md-6">
                         <h3>Score: <span id="score">0</span></h3>
+                    </div>
+                    <div class="col-md-12">
+                        <h4>High score: <span id="score">0</span></h4>
                     </div>
                 </div>
 
