--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <header class=" text-center p-3 mb-5" >
         <h1>Typing skill</h1>
     </header>
+    <button id="easy">easy</button>
+    <button id="medium"> med</button>
+    <button id="hard"> hard</button>
     <div class="container text-center">
 <!-- Word input -->
         <div class="row">
@@ -30,7 +33,7 @@
                         <h3>Score: <span id="score">0</span></h3>
                     </div>
                     <div class="col-md-12">
-                        <h4>High score: <span id="score">0</span></h4>
+                        <h4>High score: <span id="high-score">0</span></h4>
                     </div>
                 </div>
 
