--- a/index.html
+++ b/index.html
@@ -9,12 +9,24 @@
     <title>Typing skill</title>
 </head>
 <body class=" ext-center">
-    <header class=" text-center p-3 mb-5" >
-        <h1>Typing skill</h1>
+    <header class=" text-center" >
+        <h1>👨🏾‍💻</h1>
     </header>
-    <button id="easy">easy</button>
-    <button id="medium"> med</button>
-    <button id="hard"> hard</button>
+    <div class="slide container-fluid">
+         <!-- Introductions -->
+         <div class="row mt-5">
+             <div class="col-md-6">
+                 <div class="card card-body bg-secondary text-white">
+                     <h5>Instructions</h5>
+                     <p>Type each word in the given amount of seconds to score. To play again, just type the current word. Yout score will reset</p>
+                </div>
+                    <button class="mt-2" id="easy">easy</button>
+                    <button id="medium">med</button>
+                    <button id="hard">hard</button>
+                </div>
+            </div>
+       
+    </div>
     <div class="container text-center">
 <!-- Word input -->
         <div class="row">
@@ -34,16 +46,6 @@
                     </div>
                     <div class="col-md-12">
                         <h4>High score: <span id="high-score">0</span></h4>
-                    </div>
-                </div>
-
-                <!-- Introductions -->
-                <div class="row mt-5">
-                    <div class="col-md-12">
-                        <div class="card card-body bg-secondary text-white">
-                            <h5>Instructions</h5>
-                            <p>Type each word in the given amount of seconds to score. To play again, just type the current word. Yout score will reset</p>
-                        </div>
                     </div>
                 </div>
             </div>
