--- a/index.html
+++ b/index.html
@@ -9,35 +9,37 @@
     <title>Typing skill</title>
 </head>
 <body class=" ext-center">
-    <header class=" text-center" >
-        <h1>👨🏾‍💻</h1>
+    <header class="text-center" >
+        <h1 id="optionBtn">👨🏾‍💻</h1>
     </header>
-    <div class="slide container-fluid">
+    <div class="slide container-fluid" id="menuSlide">
          <!-- Introductions -->
          <div class="row mt-5">
-             <div class="col-md-6">
-                 <div class="card card-body bg-secondary text-white">
-                     <h5>Instructions</h5>
+             <div class="container col-md-8">
+                 <div class="menuCard card card-body bg-info text-white">
+                     <h5>Instructions 🤔</h5>
                      <p>Type each word in the given amount of seconds to score. To play again, just type the current word. Yout score will reset</p>
                 </div>
-                    <button class="mt-2" id="easy">easy</button>
-                    <button id="medium">med</button>
-                    <button id="hard">hard</button>
+                <div class="menuCard mt-5 card card-body bg-info text-white">
+                    <h5>Choose your destiny</h5>
+                    <button id="easy">easy 🐷🌿</button>
+                    <button id="medium">med 🐼🎋</button>
+                    <button id="hard">hard 😱🔥</button>
                 </div>
             </div>
-       
+        </div>
     </div>
     <div class="container text-center">
 <!-- Word input -->
         <div class="row">
             <div class="col-md-6 mx-auto">
                 <p class="lead">Type the given word within <span class="text-success" id="seconds"></span> Seconds:</p>
-                <h2 class="display-2 mb-5" id="current-word" ></h2>
+                <h2 class="display-2 mb-3" id="current-word" ></h2>
                 <input type="text" class="form-control form-control-lg" placeholder="Start typing..." id="word-input" autofocus>
-                <h4 class="mt-3" id="message"></h4>
+                <h4 class="mt-2" id="message"></h4>
 
                 <!-- Time & Score Columns -->
-                <div class="row mt-5">
+                <div class="row mt-2">
                     <div class="col-md-6">
                         <h3>Time Left: <span id="time">0</span></h3>
                     </div>
