--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Boogaloo|Ceviche+One|Kalam|Source+Code+Pro|VT323" rel="stylesheet">
     <title>Typing skill</title>
 </head>
-<body class=" ext-center">
+<body class="ext-center">
     <header class="text-center" >
-        <h1 id="optionBtn">👨🏾‍💻</h1>
+        <h1 id="optionBtn">👨🏾‍💻 Menu 👩🏽‍💻</h1>
     </header>
     <div class="slide container-fluid" id="menuSlide">
          <!-- Introductions -->
@@ -33,10 +34,11 @@
 <!-- Word input -->
         <div class="row">
             <div class="col-md-6 mx-auto">
-                <p class="lead">Type the given word within <span class="text-success" id="seconds"></span> Seconds:</p>
-                <h2 class="display-2 mb-3" id="current-word" ></h2>
-                <input type="text" class="form-control form-control-lg" placeholder="Start typing..." id="word-input" autofocus>
+                <p class="intro">Type the given word within <span class="text-success" id="seconds"></span> Seconds:</p>
+                <h2 class="display-2 mb-3" id="current-word"></h2>
                 <h4 class="mt-2" id="message"></h4>
+                <input type="text" class="form-control form-control-lg" placeholder="Start typing..." id="word-input" autofocus>
+                
 
                 <!-- Time & Score Columns -->
                 <div class="row mt-2">
