--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <header class="text-center" >
         <h1 id="optionBtn">👨🏾‍💻 Menu 👩🏽‍💻</h1>
     </header>
-    <div class="slide container-fluid" id="menuSlide">
+    <div class="slide" id="menuSlide">
          <!-- Introductions -->
-         <div class="row mt-5">
+         <div class="menuInfo row mt-5">
              <div class="container col-md-8">
                  <div class="menuCard card card-body bg-info text-white">
                      <h5>Instructions 🤔</h5>
@@ -29,6 +29,9 @@
                 </div>
             </div>
         </div>
+        <footer>
+            <a href="github.com/geralsy1st/typingGame"><img src="https://cdn0.iconfinder.com/data/icons/octicons/1024/mark-github-512.png" alt="github"></a>
+        </footer>
     </div>
     <div class="container text-center">
 <!-- Word input -->
@@ -55,7 +58,6 @@
             </div>
         </div>
     </div>
-    
 </body>
 <script src="js/script.js" ></script>
 </html>
